content/nomad/v1.11.x/content/docs/deploy/clusters/connect-nodes.mdx
---
layout: docs
page_title: Connect nodes into a cluster
description: |-
  Connect nodes together to create a Nomad cluster manually
  or automatically with cloud auto-join on AWS, Azure, and GCP.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-17T20:24:06-05:00
last_modified: 2025-12-04T11:53:59-06:00
# END AUTO GENERATED METADATA
---

# Connect nodes into a cluster

In order to create a Nomad cluster out of individual nodes, you need to
introduce them to one another. There are several ways to perform this:

- Manual bootstrap
- Cloud Auto-Join
- Consul

This guide describes each method and provides configuration snippets, which
you can use as starting points for your own configuration.

You may also use client node introduction tokens to restrict which clients join
your cluster.

## Manual clustering

Manually bootstrapping a Nomad cluster does not rely on additional tooling, but
does require operator participation in the cluster formation process. When
bootstrapping, Nomad servers and clients must be started and informed with the
address of at least one Nomad server.

As you can tell, this creates a chicken-and-egg problem where one server must
first be fully bootstrapped and configured before the remaining servers and
clients can join the cluster. This requirement can add additional provisioning
time as well as ordered dependencies during provisioning.

First, you need to bootstrap a single Nomad server and capture its IP address.
Place this address in the configuration once you have that nodes IP address.

For Nomad servers, this configuration may look something like this:

```hcl
server {
  enabled          = true
  bootstrap_expect = 3

  # First server address; :4648 is the Serf (gossip) port for server membership
  server_join {
    retry_join = ["<known-address>:4648"]
  }
}
```

Alternatively, you can supply a server's address after the servers have all been
started by running the [`server join` command] on the servers individually to
cluster the servers. All servers can join one other server, and then rely on the
gossip protocol to discover the rest.

```shell-session
$ nomad server join <known-address>
```

For Nomad clients, the configuration may look something like:

```hcl
client {
  enabled = true
  server_join {
    retry_join = ["<known-address>:4647"]
  }
}
```

The client node's server list can be updated at run time using the
[`node config` command].

```shell-session
$ nomad node config -update-servers <IP>:4647
```

Servers and clients use different default ports when joining:

- **Server-to-server** `retry_join` / `nomad server join` uses Nomad's
  [Serf](/nomad/docs/configuration#ports) (gossip) port, default **`4648`**
  (`ports.serf`). That is how servers form membership with each other.
- **Client-to-server** `retry_join` / `nomad node config -update-servers` uses
  the [RPC](/nomad/docs/configuration#ports) port, default **`4647`**
  (`ports.rpc`). Clients talk to servers over RPC, not Serf.

If you omit the port on a client join address, Nomad assumes `4647`. On
server join addresses the default is `4648` (see
[`server_join`](/nomad/docs/configuration/server_join)).

`retry_join` is always a list so you can seed more than one address for
resilience. Clients still only need one working server: after the first
successful contact, Nomad pushes the full set of servers in the client's
region as members are added or removed.

## Use cloud auto-join

The [`retry_join`] parameter accepts a unified interface using the
[go-discover] library for doing automatic cluster joining using cloud metadata.
To use retry-join with a supported cloud provider, specify the configuration on
the command line or configuration file as a `key=value key=value ...` string.
Values are taken literally and must not be URL encoded. If the values contain
spaces, backslashes or double quotes they need to be double quoted and the usual
escaping rules apply.

```json
{
  "retry_join": ["provider=my-cloud config=val config2=\"some other val\" ..."]
}
```

Consult the [cloud provider-specific configurations] in the cloud-autojoin
documentation. This can be combined with static IP or DNS addresses or even
multiple configurations for different providers. In order to use discovery
behind a proxy, you will need to set `HTTP_PROXY`, `HTTPS_PROXY` and `NO_PROXY`
environment variables per [Golang `net/http` library].

## Use Consul to automatically cluster nodes

To automatically bootstrap a Nomad cluster, Nomad can leverage another HashiCorp
open source tool, [Consul]. Bootstrapping Nomad is easiest against an existing
Consul cluster. The Nomad servers and clients will become informed of each
other's existence when the Consul agent is installed and configured on each
host. As an added benefit, integrating Consul with Nomad provides service and
health check registration for applications which later run under Nomad.

Consul models infrastructures as datacenters and multiple Consul datacenters can
be connected over the WAN so that clients can discover nodes in other
datacenters. Since Nomad regions can encapsulate many datacenters, you should be
running a Consul cluster in every Nomad region and connecting them over the
WAN. Refer to the Consul tutorial for both [bootstrapping] a single
datacenter and [connecting multiple Consul clusters over the WAN].

If a Consul agent is installed on the host prior to Nomad starting, the Nomad
agent will register with Consul and discover other nodes.

For servers, you must inform the cluster how many servers you expect to have.
This is required to form the initial quorum, since Nomad is unaware of how many
peers to expect. For example, to form a region with three Nomad servers, you
would use the following Nomad configuration file:

```hcl
# /etc/nomad.d/server.hcl

# data_dir tends to be environment specific.
data_dir = "/opt/nomad/data"

server {
  enabled          = true
  bootstrap_expect = 3
}
```

This configuration would be saved to disk and then run:

```shell-session
$ nomad agent -config=/etc/nomad.d/server.hcl
```

A similar configuration is available for Nomad clients:

```hcl
# /etc/nomad.d/client.hcl

datacenter = "dc1"

# data_dir tends to be environment specific.
data_dir = "/opt/nomad/data"

client {
  enabled = true
}
```

The agent is started in a similar manner:

```shell-session
$ sudo nomad agent -config=/etc/nomad.d/client.hcl
```

Nomad clients should always run as root (or with `sudo`). The above
configurations include no IP or DNS addresses between the clients and
servers. This is because Nomad detected the existence of Consul and utilized
service discovery to form the cluster.

### Consul auto-join internals

~> This section discusses the internals of the Consul and Nomad integration at a
very high level. Reading is only recommended for those curious to the
implementation.

As discussed in the previous section, Nomad merges multiple configuration files
together, so the `-config` may be specified more than once:

```shell-session
$ nomad agent -config=base.hcl -config=server.hcl
```

In addition to merging configuration on the command line, Nomad also maintains
its own internal configurations (called "default configs") which include reasonable
base defaults. One of those default configurations includes a "consul" block,
which specifies reasonable defaults for connecting to and integrating with Consul. In
essence, this configuration file resembles the following:

```hcl
# You do not need to add this to your configuration file. This is an example
# that is part of Nomad's internal default configuration for Consul integration.
consul {
  # The address to the Consul agent.
  address = "127.0.0.1:8500"

  # The service name to register the server and client with Consul.
  server_service_name = "nomad"
  client_service_name = "nomad-client"

  # Enables automatically registering the services.
  auto_advertise = true

  # Enabling the server and client to bootstrap using Consul.
  server_auto_join = true
  client_auto_join = true
}
```

Refer to the [`consul` stanza] documentation for the complete set of configuration
options.


## Use client node introduction tokens

Use client introduction tokens to restrict which clients join your cluster. The
client node introduction feature is like multi-factor authentication for your
Nomad clusters. **It does not replace mTLS**, but instead adds an additional
layer of security that prevents an unauthorized or misconfigured client from
joining a Nomad cluster.

When you generate a client introduction token, you may specify the following
optional parameters to further secure cluster access:

- Node pool: The node pool that clients with this token may join. This
  token is not valid with any other node pool.
- Node name: The token is scoped to the node with this name. No other node may
  use this token to join the cluster.
- TTL: Token expiration. The token is not valid after expiration.

Before you can use client introduction tokens, you need to bootstrap the ACL
system and have your management token saved for use with the CLI or API. Refer
to the [Bootstrap the ACL system guide](/nomad/docs/secure/acl/bootstrap) for
instructions.

Follow these steps to use client node introduction tokens:

1. Configure your Nomad server's `server.client_introduction` block. 

   This example sets strict enforcement, which means the server rejects any
   client without a valid token. Refer to the [`server.client_introduction`
   block
   documentation](/nomad/docs/configuration/server#client_introduction-parameters)
   for additional enforcement options.

   <CodeBlockConfig highlight="8-12" filename="nomad.hcl">

   ```hcl
   data_dir = "/opt/nomad/"
   acl {
     enabled = true
   }
   server {
     enabled          = true
     bootstrap_expect = 1
     client_introduction {
       enforcement          = "strict" # Default = "warn"
       default_identity_ttl = "5m"     # Default = "5m"
       max_identity_ttl     = "30m"    # Default = "30m"
     }
   }
   tls {
     http = true
     rpc  = true
     ca_file   = "/opt/nomad/tls/nomad-agent-ca.pem"
     cert_file = "/opt/nomad/tls/global-server-nomad.pem"
     key_file  = "/opt/nomad/tls/global-server-nomad-key.pem"
   }
   ```

   </CodeBlockConfig>

   If your Nomad servers are already running, you need to restart the server agent to apply the configuration changes.

   No additional configuration is required on the client node.

1. Create an ACL policy that allows the generation of client introduction
   tokens. The policy must include `node` scope with `write` permission, which
   is the least amount of privilege that you need for a client introduction
   token.
   
   <Tabs>
      <Tab heading="CLI" group="cli">

      Create a node policy for the cluster. Save the file as
      `client-introduction.hcl`.      
     
      ```hcl
      node {
        policy = "write"
      }
      ```

      Use the [`nomad acl policy apply`
      command](/nomad/commands/acl/policy/apply) to create a policy called
      `client-introduction` from the `client-introduction.hcl` file.  

     ```shell-session
     $ nomad acl policy apply client-introduction client-introduction.hcl
     ```

      </Tab>
      <Tab heading="API" group="api">

      Create a node policy for the cluster. Save the file as `client-introduction.json`.      
        
      ```json
      {
        "Name": "client-introduction",
        "Rules": {
          "node": {
            "*": {
              "policy": "write"
            } 
          }
        }
      }
      ```

      Use the [`/v1/acl/policy/:policy_name` API endpoint](/nomad/api-docs/acl/policies#create-or-update-policy) to create the policy in your cluster.

      Replace the `<MANAGEMENT_TOKEN>` and `<NOMAD_IP>` placeholders with your management token's value and your Nomad IP address.
      
      ```shell-script
      $ curl \
          --request POST \
          --data @client-introduction.json \
          --header "X-Nomad-Token: <MANAGEMENT_TOKEN>" \
          https://<NOMAD_IP>:4646/v1/acl/policy/client-introduction
      ```        

      </Tab>
   </Tabs>

1. Create an ACL role with the `client-introduction` policy that you created in
   the previous step.

   <Tabs>
   <Tab heading="CLI" group="cli">

   Use the [`nomad acl role create` command](/nomad/commands/acl/role/create) to
   create a role called `client-introduction` that uses the
   `client-introduction` policy.

   ```shell-session
   $ nomad acl role create --tls-skip-verify -name="client-introduction" \
      -policy="client-introduction"
   ```
  
   The output describes the ACL role, including its attached policies and the
   Raft index at its creation.

   ```shell-session
   ID           = cf0b4a43-b00f-cc30-b656-b34d66151b04
   Name         = client-introduction
   Description  = <none>
   Policies     = client-introduction
   Create Index = 117
   Modify Index = 117
   ```

   </Tab>
   <Tab heading="API" group="api">

   Use the [`/v1/acl/role` API endpoint](/nomad/api-docs/acl/roles#create-role)
   to create the `client-introduction` role.

   Create a `client-introduction-role.json` file to define the ACL role and link
   the `client-introduction` policy to the role.

   ```json
   {
    "Name": "client-introduction",
    "Policies": [
      {
        "Name": "client-introduction"
      }
    ]
   }
   ```

   Create the role in your cluster. Replace the `<MANAGEMENT_TOKEN>` and `<NOMAD_IP>` placeholders with your management token's value and your Nomad IP address.

   ```shell-session
   $ curl \
    --request POST \
    --header "X-Nomad-Token: <MANAGEMENT_TOKEN>" \
    --data @client-introduction-role.json \
    https://<NOMAD_IP>:4646/v1/acl/role
    ```

    The response describes the ACL role, including its attached policies and the
    Raft index at its creation.

    ```json
    {
      "CreateIndex": 117,
      "Description": "my example ACL Role",
      "ID": "cf0b4a43-b00f-cc30-b656-b34d66151b04",
      "ModifyIndex": 117,
      "Name": "client-introduction",
      "Policies": [
        {
          "Name": "client-introduction"
        }
      ]
   }
   ```

   </Tab>
   </Tabs>

1. Generate a client introduction token, which is a JSON Web Token (JWT).

   This example scopes the token to a node pool named `staging`. Scoping to a node pool is optional.

   <Tabs>
   <Tab heading="CLI" group="cli">

   Use the [`nomad node intro create`
   command](/nomad/commands/node/intro/create) to generate the client
   introduction token.  This example writes the result to a file called
   `intro_token.jwt`.
   
   ```shell-session
   $ nomad node intro create -node-pool=staging  > intro_token.jwt
   ```

   The `intro-token.jwt` file contains the JWT.

   ```shell-session
   "eyJhbGciOiJSUzI1NiIsImtpZCI6IjljZDgy..."
   ```

   </Tab>
   <Tab heading="API" group="api">

   Use the [`/v1/acl/identity/client-introduction-token` API
   endpoint](/nomad/api-docs/acl/identities#create-client-introduction-identity)
   to create the client introduction token.

   This example scopes the token to a node pool named `staging`. Scoping to a
   node pool is optional.
   
   Create a `client-introduction-token.json` file to define the node pool.

   ```json
   {
   "NodePool": "staging"
   }
   ```

   Create the client introduction token. Replace the `<MANAGEMENT_TOKEN>` and
   `<NOMAD_IP>` placeholders with your management token's value and your Nomad
   IP address.
   
   ```shell-session
   $ curl \
      --request POST \
      --header "X-Nomad-Token: <MANAGEMENT_TOKEN>" \
      --data @client-introduction-token.json \
      https://<NOMAD_IP>:4646/v1/acl/identity/client-introduction-token
   ```

   The response is the JSON Web Token.

   ```json
   {
    "JWT": "eyJhbGciOiJSUzI1NiIsImtpZCI6IjljZDgy..."
   }
   ```

   </Tab>
   </Tabs>

1. Start the Nomad client with the client introduction token.
   
   Provide the client introduction token to the Nomad client using one
   of these options:

   - Set the token as the value of a `NOMAD_CLIENT_INTRO_TOKEN` environment variable.
   - Use the [`-client-intro-token`
     parameter](/nomad/commands/agent#client-intro-token) of the `nomad agent`
     command.
   - Place the `intro_token.jwt` file in the client's state directory, which is
     by default [the `<data_dir>/client_state_dir>`
     directory](/nomad/docs/configuration/client#state_dir).

   This example starts the client with the client introduction token passed in
   the `-client-intro-token` parameter.

   ```shell-session
   $ nomad agent -config /etc/nomad.d/nomad.hcl \
   -client-intro-token "eyJhbGciOiJSUzI1NiIsImtpZCI6IjljZDgy..."
   ```

1. Monitor for client join failures.

   You have the following options to determine when client registration fails:

   - Check the server logs for `[ERROR] nomad.client: node registration without
  introduction token` messages.
   - Monitor the [`nomad.client.introduction.enforcement`
  counter](/nomad/docs/monitor#client-introduction), which increments when a
  client tries to join without a valid client introduction token.


[`consul` stanza]: /nomad/docs/configuration/consul
[`node config` command]: /nomad/commands/node/config
[`retry_join`]: /nomad/docs/configuration/server_join#retry_join
[`server join` command]: /nomad/commands/server/join
[bootstrapping]: /consul/docs/deploy/server/vm/bootstrap
[cloud provider-specific configurations]: /nomad/docs/configuration/server_join#cloud-auto-join
[connecting multiple consul clusters over the wan]: /consul/docs/east-west/wan-federation
[consul]: /consul/
[go-discover]: https://github.com/hashicorp/go-discover
[golang `net/http` library]: https://golang.org/pkg/net/http/#ProxyFromEnvironment
